Change the scope list to mutable